# News for the h2oEnsemble package. #

h2oEnsemble 0.0.9 (In progress)
----------------
* TO DO: Remove a learner from the level-one matrix, Z, if the algorithm fails to run.
* TO DO: Add a check that CV folds produce training sets that have both pos/neg examples instead of a constant response col (in the case of imbalanced data)
* TO DO: Update the `runtime` list to include times for `cv` and `baselearning`.  These were dropped in version 0.0.5.
* TO DO: Added new function `h2o.recombine` which allows the user to easily re-fit the metalearner using a new metalearning algorithm.
* TO DO: Added new functions, `h2o.saveEnsemble` and `h2o.loadEnsemble`, for easy saving and loading of ensemble models to disk.
* Added `target_ratio_comm_to_comp` argument to the `h2o.deeplearning.wrapper` function.


h2oEnsemble 0.0.8 (2015-10-07)
----------------
* Added support for the `col_sample_rate` and `sample_rate` arguments in the GLM wrapper.


h2oEnsemble 0.0.7 (2015-10-04)
----------------
* Added backward compatibility for `h2o` package with the data frame class name with "H2OFrame".  Temporarily on master, the `h2o` package is using a data frame class with name "Frame" (Rapids integration).


h2oEnsemble 0.0.6 (2015-09-28)
----------------
* Add support for new distribution/family arg in `h2o.gbm` and `h2o.glm`.
* Made some adjustments to the internals of the `h2o.ensemble` function to become compatible with the "Rapids" integration in the `h2o` package.


h2oEnsemble 0.0.5 (2015-08-10)
----------------