@@ -1,8 +1,8 @@
 Package: h2oEnsemble
 Type: Package
 Title: H2O Ensemble Learning
-Version: 0.0.8.9000
-Date: 2015-10-19
+Version: 0.0.8.9001
+Date: 2015-10-26
 Author: Erin LeDell
 Maintainer: Erin LeDell <erin@h2o.ai>
 Description: H2O Ensemble implements the Super Learner ensemble (stacking) algorithm using the H2O R interface to provide base learning algorithms.   
@@ -10,5 +10,5 @@ License: Apache License (== 2.0)
 Depends: R (>= 2.13.0), h2o (>= 3.2.0)
 NeedsCompilation: no
 SystemRequirements: Java (>= 1.6)
-Suggests: SuperLearner, cvAUC
+Suggests: SuperLearner, cvAUC, testthat
 URL: https://github.com/h2oai/h2o-3/tree/master/h2o-r/ensemble/h2oEnsemble-package
