@@ -5,8 +5,8 @@ h2o.ensemble <- function(x, y, training_frame,
                          metalearner = "h2o.glm.wrapper",
                          cvControl = list(V = 5, shuffle = TRUE),  #maybe change this to cv_control
                          seed = 1,
-                         parallel = "seq",
-                         ...) 
+                         parallel = "seq",  #only seq implemented
+                         keep_levelone_data = TRUE) 
 {
   
   starttime <- Sys.time()
@@ -36,6 +36,7 @@ h2o.ensemble <- function(x, y, training_frame,
     family <- match.arg(family)
   }
   if (family == "AUTO") {
+    # TO DO: Change this... numcats way to expensive
     if (is.factor(training_frame[,c(y)])) {
       numcats <- length(unique(as.data.frame(training_frame)[,c(y)]))
       if (numcats == 2) {
@@ -118,13 +119,14 @@ h2o.ensemble <- function(x, y, training_frame,
   print("Metalearning")
   if (is.numeric(seed)) set.seed(seed)  #If seed given, set seed prior to next step
   if (grepl("^SL.", metalearner)) {
-    # this is very hacky and should be used only for testing until we get the h2o metalearner functions sorted out...
+    # this is very hacky and should be used only for testing
     if (is.character(family)) {
       familyFun <- get(family, mode = "function", envir = parent.frame())
       #print(familyFun$family)  #does not work for SL.glmnet
     } 
     Zdf <- as.data.frame(Z)
     Y <- as.data.frame(training_frame[,c(y)])[,1]
+    # TO DO: for parity, need to add y col to Z like we do below
     runtime$metalearning <- system.time(metafit <- match.fun(metalearner)(Y = Y, 
                                                                           X = Zdf, 
                                                                           newX = Zdf, 
@@ -132,7 +134,7 @@ h2o.ensemble <- function(x, y, training_frame,
                                                                           id = seq(N), 
                                                                           obsWeights = rep(1,N)), gcFirst = FALSE)
   } else {
-    Z$y <- training_frame[,c(y)]
+    Z$y <- training_frame[,c(y)]  # do we want to add y to the Z frame?  
     runtime$metalearning <- system.time(metafit <- match.fun(metalearner)(x = learner, 
                                                                           y = "y", 
                                                                           training_frame = Z, 
@@ -144,10 +146,17 @@ h2o.ensemble <- function(x, y, training_frame,
   runtime$baselearning <- NULL
   runtime$total <- Sys.time() - starttime
   
+  # Keep level-one data?
+  if (!keep_levelone_data) {
+    Z <- NULL
+  }
+  
   # Ensemble model
   out <- list(x = x,
               y = y, 
               family = family, 
+              learner = learner,
+              metalearner = metalearner,
               cvControl = cvControl,
               folds = folds,
               ylim = ylim, 
@@ -155,7 +164,7 @@ h2o.ensemble <- function(x, y, training_frame,
               parallel = parallel,
               basefits = basefits, 
               metafit = metafit,
-              Z = Z, 
+              levelone = Z,  #levelone = cbind(Z, y)
               runtime = runtime,
               h2o_version = packageVersion(pkg = "h2o"),
               h2oEnsemble_version = packageVersion(pkg = "h2oEnsemble"))
@@ -236,7 +245,6 @@ h2o.ensemble <- function(x, y, training_frame,
 }
 
 
-# TO DO:check if this is working
 predict.h2o.ensemble <- function(object, newdata, ...) {
   
   L <- length(object$basefits)
@@ -265,5 +273,21 @@ predict.h2o.ensemble <- function(object, newdata, ...) {
 }
 
 
+print.h2o.ensemble <- function(x, ...) {
+  cat("\nH2O Ensemble fit")
+  cat("\n----------------")
+  cat("\nfamily: ")
+  cat(x$family)
+  cat("\nlearner: ")
+  cat(x$learner)
+  cat("\nmetalearner: ")
+  cat(x$metalearner)
+  cat("\n\n")
+}
+
+
+# plot.h2o.ensemble <- function(x, ...) {
+#   cat("\nPlotting for an H2O Ensemble fit is not implemented at this time.")
+# }
 
 
