@@ -1,0 +1,5 @@
+library(testthat)
+library(h2oEnsemble)
+library(cvAUC)
+
+test_check("h2oEnsemble")
